--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,9 @@
     --color-gray: #e8ebf0;
     --padding-app: 2rem 8rem;
 }
+a{
+    color: black;
+}
 /* -----------------------------CSS cho phần Header (phần đầu trang web) -----------------------------------*/
 #header{
     background-color: var(--color-gray);
@@ -321,6 +324,12 @@
                     align-items: center;
                     border: 1px solid #dcdcdc;
                     padding: 8px;
+                    box-shadow: inset 1px 1px 6px #dcdcdc, inset -1px -1px 6px #dcdcdc;
+                    img{
+                        position: relative;
+                        z-index: -1;
+
+                    }
                 }
             }
         }
@@ -436,10 +445,10 @@
         gap: 0.5rem;
         --columns: 2;
     }
-    #main .section-three .img-list{
-        --columns: 2;
-        img{
-            // margin-top: var(--space);
+    #main{
+        .section-three{
+            --space: 2rem;
+            --columns: 2;
         }
     }
     #main .section-four{
